<resources>
    <string name="app_name">RESEND</string>
    <string name="domain">resend.com</string>
    <string name="user_key">user_key</string>
    <string name="user_id_key">user_id_key</string>
    <string name="sign_up_hint">Don\'t have an account ? Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="register">SIGN UP</string>
    <string name="passcode">******</string>
    <string name="verify_passcode">Re-enter Passcode</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_full_name">Last Name\t\t\t\t\t Other Names</string>
    <string name="homepage">Home</string>
    <string name="bg_img_description">bgImage</string>
    <string name="sign_up_title">Welcome To RESEND</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="format_dob">%1$d/%2$d/%3$d</string>
    <string name="dob">D.O.B</string>
    <string name="pick_date">Pick Date</string>
    <string name="logout_btn">Logout</string>
    <string name="register_small">Register</string>
    <string name="tAndC"><![CDATA[Agree to Terms & Conditions]]></string>
    <string name="button_one">Account</string>
    <string name="button_two">Transactions</string>
    <string name="button_three">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_acct">+ Add Money</string>
    <string name="credit_account">Credit Account</string>
    <string name="amount_hint">0.00</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="balance">£ %1$.2f</string>
    <string name="fullName">%1$s</string>
    <string name="acct_number">%1$s</string>
    <string name="profile_abb">%1$s</string>
    <string name="search">Search</string>
    <string name="jd">JD</string>
    <string name="add_friend">ADD</string>
    <string name="send_money">SEND</string>
    <string name="accept_request">ACCEPT</string>
    <string name="pending_request">PENDING</string>
    <string name="credit">CREDIT</string>
    <string name="card_credit">CARD CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="transaction_amount">Amount: %1$.2f</string>
    <string name="date">23/07/1998</string>
    <string name="refresh">Refresh</string>
</resources>