<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/amount"
        android:text="@string/credit"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@id/type"
        app:layout_constraintBottom_toBottomOf="@id/type"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/transaction_amount"/>

</androidx.constraintlayout.widget.ConstraintLayout>