<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Friends">

    <FrameLayout android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView android:id="@+id/acr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/jd"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorAccent" />

        <ImageView
            android:id="@+id/circle_crop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/circle_crop"
            android:contentDescription="@string/jd" />

    </FrameLayout>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullName"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@id/frame"
        app:layout_constraintBottom_toBottomOf="@id/frame"
        app:layout_constraintStart_toEndOf="@id/frame"/>


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/acct_number"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintStart_toStartOf="@id/fullName"/>

    <Button
        android:id="@+id/action"
        android:text="@string/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:shadowColor="@color/blue"
        app:layout_constraintTop_toTopOf="@id/fullName"
        app:layout_constraintBottom_toBottomOf="@id/fullName"
        app:layout_constraintStart_toEndOf="@id/fullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>